welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:17: error: ';' expected but integer literal found.
    if (compteur%(getMondeHauteur())) != 0){
                                         ^